@@ -5,3 +5,8 @@ arch -arm64 brew install cocoapods
 
 1. pod install
    [pod install --repo-update]
+
+2. xcode 로제타 끄기
+
+3. android build memory
+   org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
